# wwtwin

./: README.md  data_processor.py  database.py  database_functions.py  example_database.ipynb  example_dataprocessor.ipynb  pyproject.toml
docs/source/: conf.py  modules.rst
sample_data/: Influent_BSM1.xlsx  test_database.db
src/wwtwin/: __init__.py  data_processor.py  database.py  database_functions.py
src/wwtwin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
