[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "wwtwin"
version = "0.1.0"
authors = [
  { name="Saba Daneshgar", email="sabadaneshgar@gmail.com"},
]
description = "Digital Twin package for water resource recovery facilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU General Public License v3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/UGentBIOMATH/wwtwin"
Issues = "https://github.com/UGentBIOMATH/wwtwin/issues"