[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "wwtwin"
version = "0.1.0"
authors = [
  { name="Saba Daneshgar", email="sabadaneshgar@gmail.com"},
]
dynamic = ["version"]
description = "Digital Twin package for water resource recovery facilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.2",
    "dateutils>=0.6.6",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
    "statsmodels>=0.14.4",
    "xlrd>=2.0.1",
    "scikit-learn>=1.7.1",
    "pyyaml>=6.0.2",
    "wwdata>=0.2.0",
]
license = "GNU General Public License v3"
license-files = ["LICEN[CS]E*"]





[project.urls]
Homepage = "https://github.com/UGentBIOMATH/wwtwin"
Issues = "https://github.com/UGentBIOMATH/wwtwin/issues"