[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "wwtwin"

authors = [
  { name="Saba Daneshgar", email="sabadaneshgar@gmail.com"},
]
dynamic = ["version"]
description = "Digital Twin package for water resource recovery facilities"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.2",
    "dateutils>=0.6.6",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
    "statsmodels>=0.14.4",
    "xlrd>=2.0.1",
    "scikit-learn>=1.7.1",
    "pyyaml>=6.0.2",
    "wwdata>=0.2.0",
    "sqlalchemy>=2.0.37",
    "openpyxl>=3.1.5",
    "toml>=0.10.2",
]

license-files = ["LICENSE"]





[project.urls]
Homepage = "https://github.com/UGentBIOMATH/wwtwin"
Issues = "https://github.com/UGentBIOMATH/wwtwin/issues"